# ChemSpeciesTransport

./: nusif.tex  test.txt
presentation/: beamerfontthemefau-4-3.sty  beamerinnerthemefau-4-3.sty  beamerouterthemefau-4-3.sty  lssbeamer_FAU.sty  presentation.tex
presentation/pics/: species2.avi
ra59wipo/skeleton/: backstep.par  basin.par  dcavity.par  poisson.par
ra59wipo/skeleton/src/: Array.cc  Array.hh  CMakeLists.txt  Debug.cc  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  GrayScaleImage.cc  GrayScaleImage.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  VTKWriter.hh  main.cc  todo.txt
ra59wipo/skeleton/tests/: ArrayTest.cc  CMakeLists.txt  CompFGTest.cc  FileReaderTest.cc  FluidSimulatorTest.cc  SORTest.cc  compfg.par  concentrationTest.cc  concentrationVisualisationTest.cc
